{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 34,
  "lineage": "9f415e1e-c0e7-3ae0-dfd2-45b504b9e0f8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "interfaceredevm-airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkInterfaces/cardinterface-airflow",
            "internal_domain_name_suffix": "i4rrx5ftkbhexnh1htkbb3vgtf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/publicIPAddresses/ippublico-airflow",
                "subnet_id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/virtualNetworks/vnetbulbe/subnets/sub-vnetbulbe"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2E-5F-94",
            "name": "cardinterface-airflow",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "Resource_Bulbe",
            "virtual_machine_id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Compute/virtualMachines/vmlinuxAirFlowBulbe"
          },
          "dependencies": [
            "azurerm_public_ip.ippublico-airflow",
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_subnet.subrede-bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "associa-grupo-recursos-vm-airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkInterfaces/cardinterface-airflow|/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe",
            "network_interface_id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkInterfaces/cardinterface-airflow",
            "network_security_group_id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe"
          },
          "dependencies": [
            "azurerm_network_interface.interfaceredevm-airflow",
            "azurerm_network_security_group.securitygroup-bulbe",
            "azurerm_public_ip.ippublico-airflow",
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_subnet.subrede-bulbe",
            "azurerm_virtual_machine.vm-linux-airflow",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "securitygroup-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe",
            "location": "eastus",
            "name": "vnetsecuritygroupbulbe",
            "resource_group_name": "Resource_Bulbe",
            "security_rule": [],
            "tags": {
              "Email": "eric.ferreira@bulbe.com.br",
              "Proprietario": "Eric Ferreira Pereira"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inboundrole-dremio-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "9047",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe/securityRules/regraportadremio",
            "name": "regraportadremio",
            "network_security_group_name": "vnetsecuritygroupbulbe",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "Resource_Bulbe",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.securitygroup-bulbe",
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inboundrole-http-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe/securityRules/regraportahttp",
            "name": "regraportahttp",
            "network_security_group_name": "vnetsecuritygroupbulbe",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "Resource_Bulbe",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.securitygroup-bulbe",
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inboundrole-interface-web-airflow-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe/securityRules/regraportaairflow-interface-web",
            "name": "regraportaairflow-interface-web",
            "network_security_group_name": "vnetsecuritygroupbulbe",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Resource_Bulbe",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.securitygroup-bulbe",
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inboundrole-kafka-broker1-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "9091",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe/securityRules/regraportakafka-broker1",
            "name": "regraportakafka-broker1",
            "network_security_group_name": "vnetsecuritygroupbulbe",
            "priority": 105,
            "protocol": "Tcp",
            "resource_group_name": "Resource_Bulbe",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.securitygroup-bulbe",
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inboundrole-kafka-broker2-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "9092",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe/securityRules/regraportakafka-broker2",
            "name": "regraportakafka-broker2",
            "network_security_group_name": "vnetsecuritygroupbulbe",
            "priority": 106,
            "protocol": "Tcp",
            "resource_group_name": "Resource_Bulbe",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.securitygroup-bulbe",
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inboundrole-kafka-control-center-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "9021",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe/securityRules/regraportakafka-control-center",
            "name": "regraportakafka-control-center",
            "network_security_group_name": "vnetsecuritygroupbulbe",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "Resource_Bulbe",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.securitygroup-bulbe",
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inboundrole-kafka-datagen-connect-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8083",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe/securityRules/regraportakafka-datagen-connect",
            "name": "regraportakafka-datagen-connect",
            "network_security_group_name": "vnetsecuritygroupbulbe",
            "priority": 109,
            "protocol": "Tcp",
            "resource_group_name": "Resource_Bulbe",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.securitygroup-bulbe",
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inboundrole-kafka-ksqldb-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8088",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe/securityRules/regraportakafka-ksqldb",
            "name": "regraportakafka-ksqldb",
            "network_security_group_name": "vnetsecuritygroupbulbe",
            "priority": 107,
            "protocol": "Tcp",
            "resource_group_name": "Resource_Bulbe",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.securitygroup-bulbe",
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inboundrole-kafka-schema-registry-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8081",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe/securityRules/regraportakafka-schema-registry",
            "name": "regraportakafka-schema-registry",
            "network_security_group_name": "vnetsecuritygroupbulbe",
            "priority": 108,
            "protocol": "Tcp",
            "resource_group_name": "Resource_Bulbe",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.securitygroup-bulbe",
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inboundrole-kafka-zookeeper-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "2121",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe/securityRules/regraportakafka-zookeeper",
            "name": "regraportakafka-zookeeper",
            "network_security_group_name": "vnetsecuritygroupbulbe",
            "priority": 104,
            "protocol": "Tcp",
            "resource_group_name": "Resource_Bulbe",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.securitygroup-bulbe",
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inboundrole-ssh-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/networkSecurityGroups/vnetsecuritygroupbulbe/securityRules/regraportassh",
            "name": "regraportassh",
            "network_security_group_name": "vnetsecuritygroupbulbe",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Resource_Bulbe",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.securitygroup-bulbe",
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ippublico-airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/publicIPAddresses/ippublico-airflow",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.172.238.69",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ippublico-airflow",
            "resource_group_name": "Resource_Bulbe",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_subnet.subrede-bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subrede-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/virtualNetworks/vnetbulbe/subnets/sub-vnetbulbe",
            "name": "sub-vnetbulbe",
            "resource_group_name": "Resource_Bulbe",
            "virtual_network_name": "vnetbulbe"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup_bulbe",
            "azurerm_virtual_network.network-bulbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network-bulbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fc1ba347-50b3-4b4e-b4fb-3cd410f6a69d",
            "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/virtualNetworks/vnetbulbe",
            "location": "eastus",
            "name": "vnetbulbe",
            "resource_group_name": "Resource_Bulbe",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/2aa7665d-0f3b-4d5e-b43e-e34bc80462a3/resourceGroups/Resource_Bulbe/providers/Microsoft.Network/virtualNetworks/vnetbulbe/subnets/sub-vnetbulbe",
                "name": "sub-vnetbulbe"
              }
            ],
            "tags": {
              "Email": "eric.ferreira@bulbe.com.br",
              "Proprietario": "Eric Ferreira Pereira"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup_bulbe"
          ]
        }
      ]
    }
  ]
}